Add autoDiscover config

--- a/config/config_default.cfg
+++ b/config/config_default.cfg
@@ -12,6 +12,9 @@ refreshToken = ""
 meeteringPoint = "" # only 1 meeteringpoint is supported.
 runOnBoot = "true" # will call the api when the program is started
 
+[Hassio]
+autoDiscover = "true"
+
 [Periode]
 #daysBack = "1;1;2"
 #aggregationBack = "Hour;Day;Month"
