Auto rediscover after hassio restart

--- a/config/config_default.cfg
+++ b/config/config_default.cfg
@@ -14,6 +14,8 @@ runOnBoot = "true" # will call the api when the program is started
 
 [Hassio]
 autoDiscover = "true"
+birthTopic = "hass/status"
+birthPayload = "online"
 
 [Periode]
 #daysBack = "1;1;2"
